add picture in background

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+html {
+  background-image: url(https://image.gala.de/22086298/t/Cz/v17/w1440/r1.5/-/grillparty-bild.jpg);
+}
+
 /* Remove default margin */
 body,
 h1,
